k8s/manifests/app/api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: simpleapi
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: api
